<resources>
    <string name="app_name">DriveLikeWalking</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pwcheck">비밀번호\n확인</string>
    <string name="email">이메일</string>
    <string name="signupcomplete">회원가입 완료</string>
    <string name="nologin">비회원으로 이용하기</string>
    <string name="tomyloc">내 위치로 이동</string>
    <string name="nearparkinglot">내 주변 주차장 찾기</string>
    <string name="neardest">목적지 주변 주차장 찾기</string>
    <string name="nearparkingdistup">내 주변 주차장 검색 범위 늘리기</string>
    <string name="nearparkingdistdown">내 주변 주차장 검색 범위 줄이기</string>
    <string name="myloc">여기</string>

    <string name="parking_detail">주차장 상세정보</string>
    <string name="check">확인</string>
    <string name="call">전화걸기</string>
    <string name="write_review">리뷰</string>
    <string name="parking_name">주차장이름 : </string>
    <string name="parking_address">주소 : </string>
    <string name="parking_type">주차장종류 : </string>
    <string name="parking_type2">운영구분 : </string>
    <string name="parking_call">전화번호 : </string>
    <string name="parking_space_all">총 주차공간 : </string>
    <string name="parked_car">현재 주차 차량수 : </string>
    <string name="parked_car_time">마지막 업데이트 시간 : </string>
    <string name="parking_free_yn">유무료구분 : </string>
    <string name="parking_night">야간무료개방여부 : </string>
    <string name="parking_open_day">평일운영시작시간 : </string>
    <string name="parking_close_day">평일운영종료시간 : </string>
    <string name="parking_open_weekend">주말운영시작시간 : </string>
    <string name="parking_close_weekend">주말운영종료시간 : </string>
    <string name="parking_basic_pay">기본주차요금 : </string>
    <string name="parking_basic_time">기본주차시간(분단위) : </string>
    <string name="parking_additional_pay">추가단위요금 : </string>
    <string name="parking_additional_time">추가단위시간(분단위) : </string>
    <string name="no_connect">미연계중</string>

    <string name="review"> - 리뷰 작성하기</string>
    <string name="star">별점 : </string>
    <string name="contents">내용 : </string>
    <string name="done">입력완료</string>
    <string name="sort">별점 높은 순</string>
    <string name="trans">리뷰 번역</string>
</resources>
