<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9FCFF"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="#007A8C"
        android:textSize="50sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="15dp"
        android:paddingRight="40dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/name"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/signup_name"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:hint="NAME"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="15dp"
        android:paddingRight="40dp">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/id"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/signup_id"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:hint="ID"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="15dp"
        android:paddingRight="40dp">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/pw"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/signup_pw"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:hint="PASSWORD"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="15dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/pwcheck"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/signup_pw_check"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:hint="PASSWORD CHECK"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="15dp"
        android:paddingRight="40dp">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="EMAIL"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <Button
        android:id="@+id/signup_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/signupcomplete"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>