<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9FCFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="45dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drive"
            android:textColor="#0084C3"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Like"
            android:textColor="#004A6E"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Walking"
            android:textColor="#00ADFF"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center">
        <EditText
            android:id="@+id/login_id"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:hint="ID"
            android:layout_marginBottom="30dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/login_pw"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="PASSWORD"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            android:layout_marginRight="40dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/nologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/nologin"
        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />
</LinearLayout>